objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Site_Live_to_OA_Yellow__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>Site Live to OA Yellow</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solomon_Code__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Solomon Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Update_Red__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>Sponsor Update Red</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sponsor_Update_Yellow__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>Sponsor Update Yellow</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TKO_to_Legal_Red__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>TKO to Legal Red</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TKO_to_Legal_Yellow__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>TKO to Legal Yellow</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Warm_Leads__c</fullName>
        <label>Total Warm Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_to_TKO_Red__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>Welcome Call to TKO Red</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_to_TKO_Yellow__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>Welcome Call to TKO Yellow</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Program_Formal_Name__c</columns>
        <columns>Account_Management_Reporting_Vertical__c</columns>
        <columns>Program_Acronym__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Create_memberships__c</columns>
        <columns>New_Business_Group__c</columns>
        <columns>Status__c</columns>
        <columns>Business_line__c</columns>
        <columns>Account_Management_Group__c</columns>
        <columns>New_Business_Vertical__c</columns>
        <columns>Program_Line__c</columns>
        <columns>Account_Management_Reporting_Business__c</columns>
        <columns>Account_Management_Reporting_Group__c</columns>
        <columns>New_Business_Business__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program_Acronym__c</columns>
        <columns>Create_memberships__c</columns>
        <columns>Business_line__c</columns>
        <columns>Program_Line__c</columns>
        <columns>Status__c</columns>
        <columns>Program_Formal_Name__c</columns>
        <columns>Applicable_Segments__c</columns>
        <filterScope>Everything</filterScope>
        <label>Programs w/ Program Line</label>
        <sharedTo>
            <group>InformationSystems</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All3</fullName>
        <columns>NAME</columns>
        <columns>Program_Formal_Name__c</columns>
        <columns>Account_Management_Reporting_Vertical__c</columns>
        <columns>Program_Acronym__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Create_memberships__c</columns>
        <columns>New_Business_Group__c</columns>
        <columns>Status__c</columns>
        <columns>Business_line__c</columns>
        <columns>Account_Management_Group__c</columns>
        <columns>New_Business_Vertical__c</columns>
        <columns>Program_Line__c</columns>
        <columns>Account_Management_Reporting_Business__c</columns>
        <columns>Account_Management_Reporting_Group__c</columns>
        <columns>New_Business_Business__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All34</fullName>
        <columns>NAME</columns>
        <columns>Program_Formal_Name__c</columns>
        <columns>Account_Management_Reporting_Vertical__c</columns>
        <columns>Program_Acronym__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Create_memberships__c</columns>
        <columns>New_Business_Group__c</columns>
        <columns>Status__c</columns>
        <columns>Business_line__c</columns>
        <columns>Account_Management_Group__c</columns>
        <columns>New_Business_Vertical__c</columns>
        <columns>Program_Line__c</columns>
        <columns>Account_Management_Reporting_Business__c</columns>
        <columns>Account_Management_Reporting_Group__c</columns>
        <columns>New_Business_Business__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_line__c</field>
            <operation>equals</operation>
            <value>TD</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All35</fullName>
        <columns>NAME</columns>
        <columns>Program_Formal_Name__c</columns>
        <columns>Account_Management_Reporting_Vertical__c</columns>
        <columns>Program_Acronym__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Create_memberships__c</columns>
        <columns>New_Business_Group__c</columns>
        <columns>Status__c</columns>
        <columns>Business_line__c</columns>
        <columns>Account_Management_Group__c</columns>
        <columns>New_Business_Vertical__c</columns>
        <columns>Program_Line__c</columns>
        <columns>Account_Management_Reporting_Business__c</columns>
        <columns>Account_Management_Reporting_Group__c</columns>
        <columns>New_Business_Business__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllBundlePrograms</fullName>
        <columns>NAME</columns>
        <columns>Program_Formal_Name__c</columns>
        <columns>Account_Management_Reporting_Vertical__c</columns>
        <columns>Renewal_Unit_Count__c</columns>
        <columns>Program_Acronym__c</columns>
        <columns>New_Business_Group__c</columns>
        <columns>Status__c</columns>
        <columns>Business_line__c</columns>
        <columns>Account_Management_Group__c</columns>
        <columns>New_Business_Vertical__c</columns>
        <columns>Program_Line__c</columns>
        <columns>Account_Management_Reporting_Business__c</columns>
        <columns>Account_Management_Reporting_Group__c</columns>
        <columns>New_Business_Marketer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_to_Bundle__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Bundled Programs</label>
    </listViews>
    <listViews>
        <fullName>Bundle_Opps</fullName>
        <columns>NAME</columns>
        <columns>Create_memberships__c</columns>
        <columns>Available_to_Bundle__c</columns>
        <columns>Business_line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_to_Bundle__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Bundle Opps</label>
    </listViews>
    <listViews>
        <fullName>CM</fullName>
        <columns>NAME</columns>
        <columns>Program_Formal_Name__c</columns>
        <columns>Account_Management_Reporting_Vertical__c</columns>
        <columns>Renewal_Unit_Count__c</columns>
        <columns>Program_Acronym__c</columns>
        <columns>New_Business_Group__c</columns>
        <columns>Status__c</columns>
        <columns>Business_line__c</columns>
        <columns>Account_Management_Group__c</columns>
        <columns>New_Business_Vertical__c</columns>
        <columns>Program_Line__c</columns>
        <columns>Account_Management_Reporting_Business__c</columns>
        <columns>Account_Management_Reporting_Group__c</columns>
        <columns>New_Business_Marketer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_line__c</field>
            <operation>equals</operation>
            <value>CM</value>
        </filters>
        <label>CM</label>
    </listViews>
    <listViews>
        <fullName>Clinovations_Programs</fullName>
        <columns>Program_Acronym__c</columns>
        <columns>NAME</columns>
        <columns>Account_Management_Reporting_Business__c</columns>
        <columns>Account_Management_Reporting_Group__c</columns>
        <columns>Account_Management_Reporting_Vertical__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Invoice_Format__c</columns>
        <columns>Invoice_Company_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Management_Reporting_Vertical__c</field>
            <operation>equals</operation>
            <value>Clinovations</value>
        </filters>
        <label>Clinovations Programs</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Crimson</fullName>
        <columns>NAME</columns>
        <columns>Program_Formal_Name__c</columns>
        <columns>Account_Management_Reporting_Vertical__c</columns>
        <columns>Renewal_Unit_Count__c</columns>
        <columns>Program_Acronym__c</columns>
        <columns>New_Business_Group__c</columns>
        <columns>Status__c</columns>
        <columns>Business_line__c</columns>
        <columns>Account_Management_Group__c</columns>
        <columns>New_Business_Vertical__c</columns>
        <columns>Program_Line__c</columns>
        <columns>Account_Management_Reporting_Business__c</columns>
        <columns>Account_Management_Reporting_Group__c</columns>
        <columns>New_Business_Marketer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Formal_Name__c</field>
            <operation>equals</operation>
            <value>Crimson Care Management</value>
        </filters>
        <label>Crimson</label>
    </listViews>
    <listViews>
        <fullName>EAB_Programs</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Program_Acronym__c</columns>
        <columns>Program_Abbreviation__c</columns>
        <columns>Program_Line__c</columns>
        <columns>Sector__c</columns>
        <columns>New_Business_Group__c</columns>
        <columns>New_Business_Vertical__c</columns>
        <columns>New_Business_Business__c</columns>
        <columns>Account_Management_Group__c</columns>
        <columns>Account_Management_Reporting_Group__c</columns>
        <columns>Account_Management_Reporting_Business__c</columns>
        <columns>Account_Management_Reporting_Vertical__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Line__c</field>
            <operation>equals</operation>
            <value>HE</value>
        </filters>
        <filters>
            <field>New_Business_Vertical__c</field>
            <operation>equals</operation>
            <value>HE PT,HE RI,Higher Ed</value>
        </filters>
        <label>EAB Programs</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Other</fullName>
        <columns>NAME</columns>
        <columns>Program_Acronym__c</columns>
        <columns>Create_memberships__c</columns>
        <columns>Business_line__c</columns>
        <columns>Status__c</columns>
        <columns>Program_Formal_Name__c</columns>
        <columns>Applicable_Segments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Applicable_Segments__c</field>
            <operation>includes</operation>
            <value>Other</value>
        </filters>
        <label>Other</label>
    </listViews>
    <listViews>
        <fullName>PT_all</fullName>
        <columns>Renewal_Unit_Count__c</columns>
        <columns>NAME</columns>
        <columns>Program_Acronym__c</columns>
        <columns>Account_Management_Reporting_Group__c</columns>
        <columns>Account_Management_Reporting_Business__c</columns>
        <columns>Account_Management_Reporting_Vertical__c</columns>
        <columns>Account_Management_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_line__c</field>
            <operation>equals</operation>
            <value>PT</value>
        </filters>
        <label>#PT - all</label>
    </listViews>
    <listViews>
        <fullName>Patient_Engagement_Offerings</fullName>
        <columns>NAME</columns>
        <columns>Program_Acronym__c</columns>
        <columns>Program_Formal_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Formal_Name__c</field>
            <operation>contains</operation>
            <value>innovation,transformation,engagement</value>
        </filters>
        <label>Patient Engagement Offerings</label>
    </listViews>
    <listViews>
        <fullName>Patient_Engagement_Offerings1</fullName>
        <columns>NAME</columns>
        <columns>Program_Acronym__c</columns>
        <columns>Program_Formal_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Formal_Name__c</field>
            <operation>contains</operation>
            <value>innovation,transformation,engagement</value>
        </filters>
        <label>Patient Engagement Offerings</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Acronym</fullName>
        <active>true</active>
        <description>Sifter #218-Need validation rule to stop ALL users (including Sys Admin) from changing Acronym on Program.</description>
        <errorConditionFormula>ISCHANGED( Program_Acronym__c )</errorConditionFormula>
        <errorMessage>Program Acronym cannot be changed. Please contact your System Adminstrator if you have the need to change an acronym.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Appropriate_Effective_Dates</fullName>
        <active>true</active>
        <description>Effective End Date Should be greater then Effective Start Date</description>
        <errorConditionFormula>Effective_Start__c &gt; Effective_End__c</errorConditionFormula>
        <errorDisplayField>Effective_Start__c</errorDisplayField>
        <errorMessage>The Effective Start date cannot be later than the Effective End date.</errorMessage>
    </validationRules>
</CustomObject>